--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: chendong
 
 # Short bio or description (displayed in the header)
-description: somebody
+description: Just somebody.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/chendonghp/chendonghp.github.io/blob/master/images/Q%E7%89%88%E5%9B%BE%E5%83%8F.jpg
 
 #
 # Flags below are optional
