--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: chendong
 description: Just somebody.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/chendonghp/chendonghp.github.io/blob/master/images/Q%E7%89%88%E5%9B%BE%E5%83%8F.jpg
+avatar: https://github.com/chendonghp/chendonghp.github.io/blob/master/images/Qface.jpg
 
 #
 # Flags below are optional
