--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: chendong
 description: Just somebody.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/chendonghp/chendonghp.github.io/blob/master/images/Qface.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
